# githubctl

./: README.md  pyproject.toml  release-notes.md  requirements.txt
src/githubctl/: cli.py  github.py  logger.py  options.py  output_format.py  sorting.py
src/githubctl/commands/: repo.py  user.py
tests/: test_github_cli.py
